k8s/api-gateway/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: vinhtin/api-gateway:latest
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: api-gateway-volume
            mountPath: /app/appsettings.json
            subPath: appsettings.json
      volumes:
        - name: api-gateway-volume
          configMap:
            name: api-gateway-config
